--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.22.0",
+    "react-window": "^1.8.11",
     "sharp": "^0.34.1"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.6.12",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-window": "^1.8.8",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
