--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "dotenv": "^16.5.0",
     "lucide-react": "^0.330.0",
     "node-fetch": "^3.3.2",
+    "pdfjs-dist": "^5.4.54",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.16.0",
+    "react-pdf": "^10.0.1",
     "react-router-dom": "^6.22.0",
     "react-window": "^1.8.11",
     "sharp": "^0.34.1"
