--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^2.6.1",
     "colorthief": "^2.6.0",
     "dotenv": "^16.5.0",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.330.0",
     "node-fetch": "^3.3.2",
     "pdfjs-dist": "^5.4.54",
