--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
+    "@tabler/icons-react": "^3.34.1",
+    "@tailwindcss/vite": "^4.1.11",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "@types/node": "^22.15.21",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.1",
+    "clsx": "^2.1.1",
     "colorthief": "^2.6.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.330.0",
+    "motion": "^12.23.12",
     "node-fetch": "^3.3.2",
     "pdfjs-dist": "^5.4.54",
     "react": "^18.2.0",
@@ -25,7 +33,9 @@
     "react-pdf": "^10.0.1",
     "react-router-dom": "^6.22.0",
     "react-window": "^1.8.11",
-    "sharp": "^0.34.1"
+    "sharp": "^0.34.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.6.12",
@@ -40,7 +50,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vite": "^5.0.8"
